LPS-109166 Fix topper hover z-index

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
@@ -65,6 +65,7 @@
 
 	&.hovered:after {
 		box-shadow: inset 0 0 0 $borderWidth $backgroundColor;
+		z-index: 1;
 	}
 
 	&.active:after {
